🐛 Fixed visibility of spellcheck errors in Night Shift mode (#874)
closes https://github.com/TryGhost/Ghost/issues/9056

- decrease transparency of background color applied to spellcheck errors in night shift

--- a/ghost/admin/app/styles/app-dark.css
+++ b/ghost/admin/app/styles/app-dark.css
@@ -329,3 +329,7 @@ input,
     background: var(--lightgrey);
     color: var(--darkgrey);
 }
+
+.CodeMirror .cm-spell-error:not(.cm-url):not(.cm-comment):not(.cm-tag):not(.cm-word) {
+    background: rgba(255, 0, 0, .30);
+}
